--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <td class="tabe">29</td>
             <td class="tabe">30</td>
             <td class="tabe">31</td>
+            <td class="tabe">1</td>
+            <td class="tabe">2</td>
+            <td class="tabe">3</td>
+            <td class="tabe">4</td>
             
         </tr>
     </table>
